--- a/test-spring/pom.xml
+++ b/test-spring/pom.xml
@@ -25,14 +25,35 @@
 
 	<dependencies>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.springframework.boot</groupId> -->
-<!-- 			<artifactId>spring-boot-starter-web</artifactId> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>spring-boot-starter-tomcat</artifactId>
+					<groupId>org.springframework.boot</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+	
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-jetty</artifactId>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.boot</groupId> -->
+<!-- 			<artifactId>spring-boot-devtools</artifactId> -->
+<!-- 		</dependency> -->
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 		
 		<dependency>
@@ -46,10 +67,44 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.3.2</version>
 		</dependency>
+		
+		<!-- http://mvnrepository.com/artifact/com.google.http-client/google-http-client -->
+<!-- 		<dependency> -->
+<!-- 		    <groupId>com.google.http-client</groupId> -->
+<!-- 		    <artifactId>google-http-client</artifactId> -->
+<!-- 		    <version>1.22.0</version> -->
+<!-- 		</dependency> -->
+		
+<!-- 		<dependency> -->
+<!-- 		  <groupId>com.google.oauth-client</groupId> -->
+<!-- 		  <artifactId>google-oauth-client</artifactId> -->
+<!-- 		  <version>1.22.0</version> -->
+<!-- 		</dependency> -->
+		
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
+		  <groupId>com.google.apis</groupId>
+		  <artifactId>google-api-services-gmail</artifactId>
+		  <version>v1-rev41-1.22.0</version>
 		</dependency>
+		
+<!-- 		<dependency> -->
+<!-- 		  <groupId>com.google.api-client</groupId> -->
+<!-- 		  <artifactId>google-api-client</artifactId> -->
+<!-- 		  <version>1.22.0</version> -->
+<!-- 		</dependency> -->
+		
+		<dependency>
+		  <groupId>com.google.oauth-client</groupId>
+		  <artifactId>google-oauth-client-jetty</artifactId>
+		  <version>1.22.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.imgscalr</groupId>
+			<artifactId>imgscalr-lib</artifactId>
+			<version>4.2</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -57,6 +112,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>at.dauswege.TestSpringApplication</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
